--- a/kebiao.html
+++ b/kebiao.html
@@ -642,14 +642,16 @@
                         "第一节": { subject: "化学", class: "2308" },
                         "第二节": { subject: "化学", class: "2309" }
                     },
-                    "星期四": {
-                        "第二节": { subject: "化学", class: "2308" },
-                        "第三节": { subject: "化学", class: "2309" },
-                        "第五节": { subject: "化学", class: "2308" },
-                        "第七节": { subject: "化学", class: "2309" },
-                        "第八节": { subject: "化学", class: "2308" }
+                    "星期二": {
+                        "第六节": { subject: "化学", class: "2308" },
+                        "第七节": { subject: "化学", class: "2309" }
                     },
                     "星期三": {
+                        "第三节": { subject: "化学", class: "2309" }
+                        "第五节": { subject: "化学", class: "2308" }
+                    },
+                    "星期四": {
+                        "第二节": { subject: "化学", class: "2308" }
                         "第三节": { subject: "化学", class: "2309" }
                     },
                     "星期五": {
