--- a/qltk_system/qltk.html
+++ b/qltk_system/qltk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>青蓝听课助手 - 专业听课规划工具</title>
+    <title>青蓝听课助手 - 化学教师听课规划工具</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,18 +12,10 @@
     <div class="container">
         <header>
             <h1>青蓝听课助手</h1>
-            <div class="subtitle">专业听课规划工具 - 青出于蓝而胜于蓝</div>
+            <div class="subtitle">化学教师听课规划工具 - 青出于蓝而胜于蓝</div>
         </header>
         
         <div class="filters">
-            <div class="filter-group">
-                <label for="subject-select">选择学科：</label>
-                <select id="subject-select">
-                    <option value="chemistry">化学</option>
-                    <!-- 可以扩展其他学科 -->
-                </select>
-            </div>
-            
             <div class="filter-group">
                 <label for="my-select">选择自己：</label>
                 <select id="my-select">
@@ -65,7 +57,6 @@
         </div>
     </div>
 
-    <!-- 数据文件将通过JavaScript动态加载 -->
     <script src="app.js"></script>
 </body>
 </html>
