--- a/qltk_system/qltk.html
+++ b/qltk_system/qltk.html
@@ -55,6 +55,11 @@
                 <span>适合听课的时间（点击可标记）</span>
             </div>
         </div>
+
+        <!-- 添加的课表链接 -->
+        <div class="timetable-link">
+            <a href="https://cookingfireworks.github.io/FZchemtimetable/kebiao.html" target="_blank">跳转至化学组课表页面</a>
+        </div>
     </div>
 
     <script src="app.js"></script>
