--- a/qltk_system/qltk.html
+++ b/qltk_system/qltk.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>青蓝听课助手</h1>
-            <div class="subtitle">化学教师听课规划工具 - 青出于蓝而胜于蓝</div>
+            <div class="subtitle">青出于蓝而胜于蓝</div>
         </header>
         
         <div class="filters">
