--- a/qltk_system/qltk.html
+++ b/qltk_system/qltk.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>青蓝听课助手</h1>
-            <div class="subtitle">青出于蓝而胜于蓝</div>
+            <div class="subtitle">湖南师大附中化学组</div>
         </header>
         
         <div class="filters">
@@ -65,3 +65,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
